tests/samples/negative/expressions/block_expression_void.ax
module block_expression_void;

fn touch() -> void {
    return;
}

fn main() -> i32 {
    let value = {
        touch()
    };
    return 0;
}
